--- a/css/graphite.css
+++ b/css/graphite.css
@@ -154,7 +154,7 @@ hr {
 .header .site_title_container .site_title a {
   font-size: 28px;
   width: 64px;
-  width: 64px;
+  height: 64px;
   letter-spacing: 2px;
   line-height: 1.2;
   color: #000000;
